<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_mine_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="乐天超市"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_contact" />

        <TextView
            android:id="@+id/tv_mine_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mine_location"
            android:text="@string/add_mr" />

        <TextView
            android:id="@+id/tv_mine_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mine_location"
            android:text="@string/add_location" />
    </LinearLayout>
</LinearLayout>